service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw3-service
spec:
  selector:
    app: hw3-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
