ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw3-ingress
spec:
  ingressClassName: nginx
  rules:
      - host: arch.homework
        http:
          paths:
            - path: /health
              pathType: Prefix
              backend:
                service:
                  name: hw3-service
                  port:
                    number: 80
